fixed gramer, changed alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -27,9 +27,17 @@ body {
 
 h5 {
     vertical-align: middle;
-    padding-left: 35%;
+    padding-left: 40%;
 }
 
 * {
     font-style: helvetica;
+}
+
+h2 {
+    text-align: center;
+}
+
+h3 {
+    text-align: center;
 }
